--- a/styles/styles.css
+++ b/styles/styles.css
@@ -215,3 +215,45 @@ section {
 .stage-brown {
     background-color: #E9D9B0;
 }
+
+/* Footer */
+
+footer {
+    width: 100%;
+    background-color: #4a4a4a;
+    color: white;
+    text-align: center;
+}
+
+.footer p {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 30px 0 0 0;
+}
+
+/* Discalaimer */
+
+.card-body {
+    color: white;
+    text-align: left;
+}
+
+.btn-link {
+    font-weight: 400;
+    color: white;
+    text-decoration: none;
+}
+
+footer .btn-link {
+    padding-bottom: 30px;
+}
+
+.btn-link:hover {
+    font-weight: 600;
+    color: white;
+    text-decoration: none;
+}
+
+footer hr {
+    background-color: white;
+}
