--- a/styles/styles.css
+++ b/styles/styles.css
@@ -258,6 +258,14 @@ footer {
 
 /* Media queries */
 
+@media only screen and (max-width: 1000px) {
+    /* Copy stage */
+
+    h2.bigger {
+        width: 100%;
+    }
+}
+
 @media only screen and (max-width: 785px) {
     /* Hero stage */
     
