--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,6 +40,25 @@ p {
     max-width: 100vw;
 }
 
+.header-mobile {
+    display: none;
+}
+
+.header-copy {
+    position: relative;
+    text-align: center;
+}
+
+.header-head {
+    position: aboslute;
+    top: 50%;
+    left: 0;
+}
+
+.header-p {
+
+}
+
 /* Header scroll down button */
 
 @keyframes bounce {
@@ -252,6 +271,22 @@ footer {
 }
 
 @media only screen and (max-width: 785px) {
+    /* Header */
+
+    .header-mobile {
+        display: inherit;
+        height: 600px;
+        background-position: top;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-image: url(../assets/img/loft-narrow.jpg);
+        max-width: 100vw;
+    }
+
+    .header-parallax {
+        display: none;
+    }
+   
     /* Hero stage */
     
     .stage h1 {
