--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,11 +34,12 @@ p {
 .header-parallax {
     height: 600px;
     background-attachment: fixed;
-    background-position: top;
+    background-position: top center;
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url(../assets/img/loft-narrow.jpg);
     max-width: 100vw;
+    width: 100%;
 }
 
 .header-mobile {
